--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_ViewAll.cshtml
@@ -3,7 +3,7 @@
     <thead>
         <tr>
             <th style="width:2%!important">Sno.</th>
-            <th style="width:10%!important">Court</th>
+            <th style="width:10%!important">Court type</th>
             <th style="width:10%!important">Court</th>
             <th style="width:15%!important">Type</th>
             <th style="width:35%!important">Case Detail</th>
