--- a/CourtApp.Web/Areas/LawyerDiary/Views/CaseNature/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/CaseNature/_ViewAll.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<CaseNatureViewModel>
-<table id="brandTable" class="table table-striped" width="100%" cellspacing="0">
+<table id="tblNature" class="table table-striped" width="100%" cellspacing="0">
     <thead>
         <tr>
             <th>Court Type</th>
@@ -56,6 +56,7 @@
 </table>
 <script>
     $(document).ready(function () {
-        $("#brandTable").DataTable();
+        JqueryDataTable('tblNature','Case Nature Data List','0,1');
+        // $("#tblNature").DataTable();
     });
 </script>
