--- a/CourtApp.Web/Areas/LawyerDiary/Views/CaseStage/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/CaseStage/_ViewAll.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<CaseStageViewModel>
-<table id="brandTable" class="table table-striped" width="100%" cellspacing="0">
+<table id="tblCaseStage" class="table table-striped" width="100%" cellspacing="0">
     <thead>
-        <tr>            
-            <th>Case Stage</th>           
+        <tr>
+            <th>Case Stage</th>
             @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Delete)).Result.Succeeded
-             || (AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Edit)).Result.Succeeded)
+            || (AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Edit)).Result.Succeeded)
             {
                 <th>Actions</th>
             }
@@ -14,40 +14,42 @@
 
         @foreach (var bt in Model)
         {
-        <tr>           
-            <td>
-                @bt.CaseStage
-            </td>
-            @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Delete)).Result.Succeeded || (AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Edit)).Result.Succeeded)
-            {
-                <td text-right">
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Action
-                        </button>
-                        <div class="dropdown-menu shadow animated--grow-in">
-                            @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Edit)).Result.Succeeded)
-                            {
-                                <a onclick="jQueryModalGet('/LawyerDiary/casestage/OnGetCreateOrEdit?id=@bt.Id','Edit Brand')" class="dropdown-item"><i class="fas fa-pencil-alt"></i>  Edit</a>
-
-                            }
-                            @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Delete)).Result.Succeeded)
-
-                            {
-                                <form id="form_delete_@bt.Id" asp-area="LawyerDiary" asp-controller="casestage" method="post" asp-action="OnPostDelete" asp-route-id="@bt.Id" onsubmit="return jQueryModalDelete(this)">
-                                    <a href="javascript:$('#form_delete_@bt.Id').submit();" class="dropdown-item"><i class="fas fa-trash-alt"></i>  Delete</a>
-                                </form>
-                            }
-                        </div>
-                    </div>
+            <tr>
+                <td>
+                    @bt.CaseStage
                 </td>
-            }
-        </tr>
+                @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Delete)).Result.Succeeded || (AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Edit)).Result.Succeeded)
+                {
+                    <td text-right">
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Action
+                            </button>
+                            <div class="dropdown-menu shadow animated--grow-in">
+                                @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Edit)).Result.Succeeded)
+                                {
+                                    <a onclick="jQueryModalGet('/LawyerDiary/casestage/OnGetCreateOrEdit?id=@bt.Id','Edit Brand')" class="dropdown-item"><i class="fas fa-pencil-alt"></i>  Edit</a>
+
+                                }
+                                @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Delete)).Result.Succeeded)
+
+                                {
+                                    <form id="form_delete_@bt.Id" asp-area="LawyerDiary" asp-controller="casestage" method="post" asp-action="OnPostDelete" asp-route-id="@bt.Id" onsubmit="return jQueryModalDelete(this)">
+                                        <a href="javascript:$('#form_delete_@bt.Id').submit();" class="dropdown-item"><i class="fas fa-trash-alt"></i>  Delete</a>
+                                    </form>
+                                }
+                            </div>
+                        </div>
+                    </td>
+                }
+            </tr>
         }
     </tbody>
 </table>
 <script>
     $(document).ready(function () {
-        $("#brandTable").DataTable();
+        var ecols=[0];
+        JqueryDataTable("tblCaseStage","Case Stage Data",ecols);
+
     });
 </script>
