--- a/CourtApp.Web/Areas/LawyerDiary/Views/CourtType/Index.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/CourtType/Index.cshtml
@@ -22,10 +22,10 @@
 </div>
 @section Scripts
 {
-    <script src="~/js/site.js"></script>
+    @* <script src="~/js/site.js"></script> *@
     <script>
         $(document).ready(function () {
-            $("#brandTable").DataTable();
+            // $("#brandTable").DataTable();
             loadData();
             $('#reload').on('click', function () {
                 loadData();
