--- a/CourtApp.Web/Areas/LawyerDiary/Views/CourtType/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/CourtType/_ViewAll.cshtml
@@ -1,7 +1,8 @@
 ﻿@model IEnumerable<CourtTypeViewModel>
-<table id="brandTable" class="table table-striped" width="100%" cellspacing="0">
+<table id="tblCourtType" class="table table-striped" width="100%" cellspacing="0">
     <thead>
         <tr>
+            <th>Sno.</th>
             <th>@localizer["Court Type"]</th>
             <th>@localizer["Code"]</th>
             @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Delete)).Result.Succeeded
@@ -12,10 +13,13 @@
         </tr>
     </thead>
     <tbody>
-
+        @{
+            int count = 0;
+        }
         @foreach (var bt in Model)
         {
             <tr>
+                <td>@(count = count + 1)</td>
                 <td>
                     @bt.CourtType
                 </td>
@@ -52,6 +56,7 @@
 </table>
 <script>
     $(document).ready(function () {
-        $("#brandTable").DataTable();
+        var columns=[0,1,2];
+        JqueryDataTable('tblCourtType','Court Types',columns);
     });
 </script>
