--- a/CourtApp.Web/Areas/Litigation/Views/CaseTracking/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseTracking/_ViewAll.cshtml
@@ -1,11 +1,15 @@
 ﻿@model IEnumerable<CaseSearchViewModel>
-<table id="tblCases" class="table table-striped" width="100%" cellspacing="0">
+
+<table id="tblCaseSearch" class="table table-striped" width="100%" cellspacing="0">
     <thead>
-        <tr>
-            <th style="width:5%;">Sno.</th>
-            <th style="width:25%;">Case No/Year</th>
-            <th style="width:55%;">Parties</th>
-            <th style="width:15%;">Document</th>
+        <tr>         
+            <th style="width:1%!important">Sno.</th>
+            <th style="width:25%!important">Court</th>
+            <th style="width:25%!important">Type</th>
+            <th style="width:5%!important">No.</th>
+            <th style="width:5%!important">Year</th>            
+            <th style="width:38%!important">Title</th>
+            <th style="width:1%;"></th>
         </tr>
     </thead>
     <tbody>
@@ -20,7 +24,16 @@
                 </td>
 
                 <td>
-                    @bt.NoYear
+                    @bt.Court
+                </td>
+                <td>
+                    @bt.CaseType
+                </td>
+                <td>
+                    @bt.No
+                </td>
+                <td>
+                    @bt.Year
                 </td>
                 <td>
                     @string.Concat(bt.Title)
@@ -38,6 +51,6 @@
 </table>
 <script>
     $(document).ready(function () {
-        $("#tblCases").DataTable();
-    });
+        JqueryDataTable('tblCaseSearch','Case Search Data','0,1,2');
+    });    
 </script>
