--- a/CourtApp.Web/Areas/Litigation/Views/Drafting/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/Drafting/_ViewAll.cshtml
@@ -47,6 +47,9 @@
 </table>
 <script>
     $(document).ready(function () {
-        $("#tblFormCaseMappingDt").DataTable();
+        JqueryDataTable('tblFormCaseMappingDt','Case Drafting Data','0,1,2,3');
     });
+    // $(document).ready(function () {
+    //     $("#tblFormCaseMappingDt").DataTable();
+    // });
 </script>
