--- a/CourtApp.Web/Views/Shared/_Styles.cshtml
+++ b/CourtApp.Web/Views/Shared/_Styles.cshtml
@@ -21,3 +21,6 @@
 <link href="~/lib/bootstrap/dist/css/bootstrap-multiselect.css" rel="stylesheet" />
 <link href="~/lib/bootstrap/dist/css/bootstrap-multiselect.min.css" rel="stylesheet" />
 <link href="~/assets/vendor/ckeditor5.css" rel="stylesheet" />
+<link href="~/css/site.css" rel="stylesheet" />
+<!-- DataTables Buttons extension CSS -->
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/2.3.0/css/buttons.dataTables.min.css">
