--- a/CourtApp.Web/wwwroot/css/site.css
+++ b/CourtApp.Web/wwwroot/css/site.css
@@ -73,3 +73,37 @@ body {
     white-space: nowrap;
     line-height: 60px; /* Vertically center the text there */
 }
+
+table {
+    border: 1px solid #ddd;
+    border-collapse: collapse;
+}
+tr {
+    height: 30px; /* Set height for rows */
+}
+
+th, td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    font-family: Arial, sans-serif; /* Set the font */
+    height: 30px; /* Set the height for th and td */
+}
+
+/* Custom style for the export button */
+.dt-buttons, .dt-button {
+    float: right !important;
+    height: 31px;
+    margin-left: 5px;
+    margin-bottom: 10px;
+    background-color: #4CAF50; /* Green background */
+    color: white; /* White text */
+    border: none;
+    //padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 14px;
+}
+
+    /* Change button color on hover */
+    .dt-button:hover {
+        background-color: #45a049; /* Darker green when hovered */
+    }
